# btrf-mount-windows

./: .gitignore  Cargo.toml  angular.json  package.json
.github/workflows/: benchmarks.yml  codeql.yml  frontend.yml  release.yml  rust.yml  security.yml  tauri.yml
benches/: btrfs_benchmarks.rs
scripts/: generate-updater-keys.sh  install-dokan.cmd  install-dokan.ps1
src/: ffi.rs  index.html  lib.rs  main.rs  styles.css  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.png.tmp
src-tauri/src/: commands.rs  main.rs
src/app/: app.component.ts  app.routes.ts
src/app/components/device-browser/: device-browser.component.ts
src/app/components/mount-manager/: mount-manager.component.ts
src/app/components/snapshot-panel/: snapshot-panel.component.ts
src/app/components/subvolume-tree/: subvolume-tree.component.ts
src/app/components/update-notification/: update-notification.component.ts
src/app/services/: tauri.service.ts  updater.service.ts
src/blockdev/: image.rs  mod.rs  physical.rs
src/core/: checksum.rs  chunk.rs  compress.rs  extent.rs  inode.rs  mod.rs  subvolume.rs  superblock.rs  tree.rs
src/fuse/: handler.rs  mod.rs  mount.rs  operations.rs
