[package]
name = "btrf-mount-windows"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Pegasus Heavy Industries LLC <pegasusheavyindustries@gmail.com>"]
repository = "https://github.com/PegasusHeavyIndustries/btrf-mount-windows"
description = "BTRFS filesystem driver for Windows with GUI"

[workspace]
members = ["src-tauri"]

[dependencies]
# Windows APIs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }

# Memory mapping
memmap2 = "0.9"

# Checksums
crc32c = "0.6"

# Compression
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.28"

# Serialization / parsing
byteorder = "1.5"
zerocopy = { version = "0.8", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.10", features = ["v4"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
parking_lot = "0.12"

# FUSE/Dokan (Windows only)
[target.'cfg(windows)'.dependencies]
dokan = "0.3"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "btrfs_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
debug = true
lto = "thin"
opt-level = 3

[profile.dev]
opt-level = 1  # Faster dev builds while keeping debug info

[profile.test]
opt-level = 2  # Faster test execution
