[package]
name = "btrfs-mount-gui"
version = "0.1.0"
description = "BTRFS Mount Windows GUI"
authors = ["Pegasus Heavy Industries LLC <pegasusheavyindustries@gmail.com>"]
license = "MIT"
repository = "https://github.com/PegasusHeavyIndustries/btrf-mount-windows"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Main library
btrf-mount-windows = { path = ".." }

# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
